Move localcleaner to syncwatcher project Add plex scan post-organize

--- a/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
+++ b/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl
-    x:Class="MVVM.View.LocalCleanerView"
+    x:Class="SyncWatcherTray.View.LocalCleanerView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:view="clr-namespace:FilebotApi.View"
     xmlns:view1="clr-namespace:MVVM.View;assembly=MVVM"
-    xmlns:viewModel="clr-namespace:FilebotApi.ViewModel"
-    d:DataContext="{d:DesignInstance viewModel:LocalCleanerViewModel}"
+    xmlns:viewModel1="clr-namespace:SyncWatcherTray.ViewModel"
+    xmlns:view="clr-namespace:FilebotApi.View;assembly=FilebotApi"
+    d:DataContext="{d:DesignInstance viewModel1:LocalCleanerViewModel}"
     d:DesignHeight="800"
     d:DesignWidth="600"
     mc:Ignorable="d">
