--- a/src/projects/SyncWatcherTray/View/MainWindow.xaml
+++ b/src/projects/SyncWatcherTray/View/MainWindow.xaml
@@ -10,9 +10,9 @@
     xmlns:mvvmview="clr-namespace:MVVM.View;assembly=MVVM"
     xmlns:tb="http://www.hardcodet.net/taskbar"
     xmlns:themes="clr-namespace:Themes;assembly=Themes"
-    xmlns:view="clr-namespace:MVVM.View;assembly=FilebotApi"
     xmlns:viewModel="clr-namespace:SyncWatcherTray.ViewModel"
     xmlns:winscp="clr-namespace:WinScpApi.View;assembly=WinScpApi"
+    xmlns:view="clr-namespace:SyncWatcherTray.View"
     Title="MainWindow"
     Width="800"
     Height="650"
