--- a/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
+++ b/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
@@ -33,13 +33,27 @@
 
         <view1:LogView Grid.Row="2" />
 
-        <Button
-            Grid.Row="3"
-            Width="100"
-            Height="32"
-            Margin="5"
-            HorizontalAlignment="Center"
-            Command="{Binding OrganizeCommand}"
-            Content="SORT" />
+        <Grid
+            Grid.Row="3">
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Grid.Column="0"
+                Width="100"
+                Height="32"
+                Margin="5"
+                HorizontalAlignment="Center"
+                Command="{Binding OrganizeCommand}"
+                Content="SORT" />
+            
+            <CheckBox
+                Grid.Column="1"
+                Content="Auto"
+                IsChecked="{Binding IsAutoCleanEnabled}"></CheckBox>
+        </Grid>
     </Grid>
 </UserControl>
