--- a/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
+++ b/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
@@ -7,6 +7,7 @@
     xmlns:view1="clr-namespace:MVVM.View;assembly=MVVM"
     xmlns:viewModel1="clr-namespace:SyncWatcherTray.ViewModel"
     xmlns:view="clr-namespace:FilebotApi.View;assembly=FilebotApi"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
     d:DataContext="{d:DesignInstance viewModel1:LocalCleanerViewModel}"
     d:DesignHeight="800"
     d:DesignWidth="600"
@@ -15,8 +16,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
-            <RowDefinition Height="1*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
         <view1:DirectoryView
@@ -24,29 +25,54 @@
             Margin="0,0,0,8"
             DataContext="{Binding DirectoryViewModel}" />
 
-        <view1:LogView Grid.Row="1" />
 
         <Grid
-            Grid.Row="2">
-            
+            Grid.Row="1">
+
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
             <Button
-                Grid.Column="0"
-                Width="100"
+                Grid.Column="1"
+                Width="200"
                 Height="32"
                 Margin="5"
                 HorizontalAlignment="Center"
                 Command="{Binding OrganizeCommand}"
                 Content="SORT" />
-            
+
             <CheckBox
-                Grid.Column="1"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"
+                Grid.Column="2"
                 Content="Auto"
                 IsChecked="{Binding IsAutoCleanEnabled}"></CheckBox>
         </Grid>
+
+        <Border
+            BorderBrush="Black"
+            BorderThickness="1"
+            Padding="3"
+            Margin="4"
+            CornerRadius="2"
+            Grid.Row="2">
+            <Grid>
+                <view1:LogView />
+
+                <fa:ImageAwesome
+                    Width="30"
+                    Height="30"
+                    Margin="12"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Icon="Spinner"
+                    Spin="True"
+                    SpinDuration="2"
+                    Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}" />
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
