--- a/src/shared/MVVM/View/DirectoryView.xaml
+++ b/src/shared/MVVM/View/DirectoryView.xaml
@@ -100,6 +100,6 @@
         <TextBlock
             x:Name="StatusTextBlock"
             Grid.Row="2"
-            Margin="0,12,0,0" />
+            Margin="0, 3" />
     </Grid>
 </UserControl>
