--- a/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
+++ b/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
@@ -8,7 +8,7 @@
     xmlns:viewModel1="clr-namespace:SyncWatcherTray.ViewModel"
     xmlns:view="clr-namespace:FilebotApi.View;assembly=FilebotApi"
     xmlns:fa="http://schemas.fontawesome.io/icons/"
-    d:DataContext="{d:DesignInstance viewModel1:LocalCleanerViewModel}"
+    d:DataContext="{d:DesignInstance viewModel1:LocalCleanerViewModel, IsDesignTimeCreatable=True}"
     d:DesignHeight="800"
     d:DesignWidth="600"
     mc:Ignorable="d">
