Added+integrated filebot settings page with auto-save

--- a/src/projects/SyncWatcherTray/View/MainWindow.xaml
+++ b/src/projects/SyncWatcherTray/View/MainWindow.xaml
@@ -68,6 +68,10 @@
                     <mvvmview:LogView />
                 </TabItem>
 
+                <TabItem Header="Settings">
+                    <filebot:SettingsView DataContext="{Binding CompletedDirectory.Filebot}"/>
+                </TabItem>
+
             </controls:TabControlEx>
         </Grid>
 
