--- a/src/shared/WinScpApi/View/SettingsView.xaml
+++ b/src/shared/WinScpApi/View/SettingsView.xaml
@@ -4,10 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:properties="clr-namespace:WinScpApi.Properties"
+             xmlns:sftp="clr-namespace:Common.SFTP"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance properties:SessionConfig}">
+             d:DataContext="{d:DesignInstance sftp:SessionConfig}">
 
     <Grid>
 
