Code cleanup shared

--- a/src/shared/FilebotApi/View/SettingsView.xaml
+++ b/src/shared/FilebotApi/View/SettingsView.xaml
@@ -1,11 +1,11 @@
 ﻿<UserControl x:Class="FilebotApi.View.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:properties="clr-namespace:FilebotApi.Properties"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance properties:Settings}">
 
@@ -26,8 +26,6 @@
                            HideInheritedProperties="True"
                            AutoGenerateProperties="True"
                            ShowHorizontalScrollBar="False"
-                           SelectedObject="{Binding}">
-
-        </xctk:PropertyGrid>
+                           SelectedObject="{Binding}" />
     </Grid>
 </UserControl>
