--- a/src/shared/Themes/Styles/ContextMenuStyle.xaml
+++ b/src/shared/Themes/Styles/ContextMenuStyle.xaml
@@ -1,4 +1,5 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Colors/Colors.xaml" />
@@ -15,9 +16,11 @@
                     <Border Uid="Border_93">
                         <Border.Style>
                             <Style TargetType="{x:Type Border}">
-                                <Setter Property="Tag" Value="{DynamicResource {x:Static SystemParameters.DropShadowKey}}" />
+                                <Setter Property="Tag"
+                                        Value="{DynamicResource {x:Static SystemParameters.DropShadowKey}}" />
                                 <Style.Triggers>
-                                    <DataTrigger Binding="{Binding Tag, RelativeSource={RelativeSource Self}}" Value="True">
+                                    <DataTrigger Binding="{Binding Tag, RelativeSource={RelativeSource Self}}"
+                                                 Value="True">
                                         <Setter Property="Background" Value="Transparent" />
                                         <Setter Property="Padding" Value="0,0,5,5" />
                                         <Setter Property="Effect">
