--- a/src/shared/WinScpApi/View/FtpManagerView.xaml
+++ b/src/shared/WinScpApi/View/FtpManagerView.xaml
@@ -64,7 +64,7 @@
                 Height="30"
                 Margin="2"
                 Background="Transparent"
-                Command="{Binding SyncAllCommand}"
+                Command="{Binding SyncSelectedCommand}"
                 IsEnabled="{Binding Manager.Client.IsOpened}">
                 <Button.Content>
                     <fa:ImageAwesome
